adwaita: Fix the greediness of row:not(.expander)
This avoids list rows (e.g. the ones in a stack sidebar) to be
accidentally selected and see their padding messed up.

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -3662,7 +3662,8 @@ list {
     border-color: $backdrop_borders_color;
   }
 
-  row:not(.expander) { padding: 2px; }
+  row { padding: 2px; }
+  row.expander { padding: 0px; }
   row.expander .row-header { padding: 2px; }
 }
 
